<resources>
    <string name="app_name">Scruffy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="verifyNumberText">Verify Your Phone Number</string>
    <string name="verifyInfoText">We will send verification code on your number to verify.</string>
    <string name="verifySendButton">Send Verification Code</string>
    <string name="typeYourNumber">Type Your Number</string>
    <string name="verifyYourPhone">Verify Number</string>
    <string name="profileText">Profile Info</string>
    <string name="nameInput">Enter Your Name</string>
    <string name="continueButtonText">CONTINUE</string>
    <string name="editNameAndImage">Please set your name and image</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="usernameForCA">Username</string>
    <string name="onlineForCA">Online</string>
    <string name="cover">Cover</string>
    <string name="blue_sky">Blue Sky</string>
    <string name="city_center">City Center</string>
    <string name="rainy_day">Rainy Day</string>
    <string name="computer_store">Computer Store</string>
    <string name="cafe_mood">Cafe Mood</string>
    <string name="verifyForOTP">Verify</string>
    <string name="verify_number">Verify Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="settingsForSA">Settings</string>
    <string name="displayForSA">Display</string>
    <string name="night_modeForSA">Night Mode</string>
    <string name="coverForSA">Cover Mode</string>
    <string name="chat_displayForSA">Chat Display</string>
    <string name="chat_backgroundForSA">Chat Background</string>
    <string name="languageForSA">Language</string>
    <string name="profileForSA">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="phoneNumber">PhoneNumber</string>
    <string name="edit_profileForUP">EDIT PROFILE</string>
    <string name="invite_your_friendsForUP">INVITE YOUR FRIENDS</string>
    <string name="app_language">App Language</string>
    <string name="englishLanguage">English</string>
    <string name="turkishLanguage">Turkish</string>
    <string name="germanLanguage">German</string>
    <string name="tap_to_chat">Tap To Chat</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="github">Github</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="imagefrom">imageFrom</string>
    <string name="application">Application</string>
    <string name="clear_cache">Clear Cache</string>
</resources>