<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity"
    android:background="@color/dark_white_mode"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryThemeColor"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/back_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/profile_icon"
        />

    <TextView
        android:id="@+id/profileInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textThemeColor"
        android:layout_marginTop="16dp"
        android:text="@string/profileText"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/editNameAndPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textThemeColor"
        android:layout_marginTop="16dp"
        android:text="@string/editNameAndImage"
        android:textSize="16sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameInput" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="20dp"
        android:text="@string/continueButtonText"
        android:layout_marginTop="18dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>