<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CoverActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryThemeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryThemeColor"
            app:navigationIcon="@drawable/scruffy_back"
            app:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/settingsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cover"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textColor="@color/white"/>

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/blueSky"
                    android:layout_width="wrap_content"
                    android:layout_height="220dp"
                    android:src="@drawable/profile_bg"/>

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/blue_sky"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_button_text_color"
                    android:textSize="18sp" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/cityCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/citycenter_cover"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city_center"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:textColor="@drawable/radio_button_text_color"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/rainyDay"
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:src="@drawable/rainy_cover"/>

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rainy_day"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:textColor="@drawable/radio_button_text_color"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/computerStore"
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:src="@drawable/computerstore"/>

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/computer_store"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:textColor="@drawable/radio_button_text_color"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/cafeMood"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:src="@drawable/cafemood"/>

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    android:text="@string/cafe_mood"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:textColor="@drawable/radio_button_text_color"
                    />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>