<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity"
    android:background="@color/dark_white_mode">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryThemeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryThemeColor"
            app:navigationIcon="@drawable/back_icon"
            app:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/settingsTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsForSA"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textColor="@color/white"/>

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/displayLayout"
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/displayForSA"
                    android:textColor="#FFF"
                    />

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightModeIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/theme_icon"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/night_modeForSA"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/nightModeIcon"
                        />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/nightModeSwitch"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/cover_mode"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/coverImageIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/cover_icon"
                        android:background="@drawable/round_back_cover_mode"
                        android:padding="8dp"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/coverForSA"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/coverImageIcon"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/forward_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_displayForSA"
                    android:textColor="#FFF"
                    />

                <RelativeLayout
                    android:id="@+id/selectBackgroundLayout"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/chatBackgroundIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/scruffy_chat_background_icon"
                        android:background="@drawable/round_back_chat_background"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/chat_backgroundForSA"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/chatBackgroundIcon"
                        />

                    <ImageView
                        android:id="@+id/selectBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/forward_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>


                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application"
                    android:textColor="#FFF"
                    />

                <RelativeLayout
                    android:id="@+id/clearCacheLayout"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/clearCacheIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/clear_cache"
                        android:background="@drawable/round_back_clear_cache"
                        android:padding="7dp"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/clear_cache"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/clearCacheIcon"
                        />

                    <ImageView
                        android:id="@+id/clearCache"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/forward_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>


                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profileForSA"
                    android:textColor="#FFF"
                    />

                <RelativeLayout
                    android:id="@+id/signOutLayout"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/signOutIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/sign_out_icon"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="8dp"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/sign_out"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/signOutIcon"
                        />

                    <ImageView
                        android:id="@+id/signOutToDirect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/forward_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>