<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdateProfile"
    android:background="@color/dark_white_mode">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:translationZ="1dp"
        android:outlineProvider="none"
        android:visibility="visible"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_icon" />

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/default_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/selectBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:src="@drawable/upload_icon"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <ImageView
        android:id="@+id/selectProfilePhoto"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="10dp"
        android:translationZ="@dimen/google_1x"
        android:visibility="invisible"
        android:src="@drawable/upload_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileImageView"
        app:layout_constraintEnd_toEndOf="@+id/profileImageView"
        app:layout_constraintStart_toStartOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="@+id/profileImageView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-30dp"
        android:src="@drawable/simpson_bart"
        app:civ_border_color="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />

    <TextView
        android:id="@+id/userNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:text="@string/usernameForCA"
        android:textColor="@color/textThemeColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

    <EditText
        android:id="@+id/changeUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameForCA"
        android:textColor="@color/textThemeColor"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

    <TextView
        android:id="@+id/phoneNumberProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        android:textColor="@color/textThemeColor"
        android:text="@string/phoneNumber"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/userNameProfile"
        app:layout_constraintTop_toBottomOf="@+id/userNameProfile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cornerRadius="20dp"
        android:text="@string/edit_profileForUP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/textThemeColor"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberProfile" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/inviteYourFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_your_friendsForUP"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

</androidx.constraintlayout.widget.ConstraintLayout>